fixed spacing

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,7 +2,8 @@ body {
     background-color: #1c1d1f;
     color:#a3eeff;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Arial Narrow, sans-serif;
+    font-size: 25px;
     padding: 10px;
     margin: 20px;
 }
@@ -12,13 +13,15 @@ button {
     color: #1c1d1f;
     margin: 20px;
     padding: 10px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Arial Narrow, sans-serif;
+    font-size: 20px;
 }
 
 input {
     padding: 10px;
     margin: 20px;
     width: 40%;
+    font-size: 20px;
 }
 
 h1 {
@@ -29,10 +32,11 @@ table {
     text-align: left;
     width: 100%;
     padding: 20px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Arial Narrow, sans-serif;
+    font-size: 25px;
 }
 
 img {
-    margin: 40px;
-    padding: 20px;
+    margin: 30px;
+    padding: 15px;
 }
